--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		
 		
     
-     <link rel="shortcut icon" type="image/x-icon" href="https://enespazar.com/favicon.ico">
-     <link rel="icon" type="image/x-icon" href="https://enespazar.com/favicon.ico">
+     <link rel="shortcut icon" type="image/x-icon" href="http://enespazar.com/favicon.ico">
+     <link rel="icon" type="image/x-icon" href="http://enespazar.com/favicon.ico">
     
 	</head>
 	<body class="loading">
