--- a/programlar.html
+++ b/programlar.html
@@ -10,6 +10,30 @@
                 Your Uninstaller
             </a>
   </li>
+   <li>
+    <a href="https://jhiwr-my.sharepoint.com/:u:/g/personal/hr40_365mspro_site/EWwwS9s7wltFsu0aSgAzQBsB1Lo2LL5aHskCxrrtHHthyg?e=0oI04E"
+                target="_blank">
+                Eset Nod32
+            </a>
+  </li>  
+   <li>
+    <a href="https://jhiwr-my.sharepoint.com/:u:/g/personal/hr40_365mspro_site/EQoy6tLWqYFHqSNGq3mRnMUB1Eop93VtziEQqe4h-UcZCw?e=HjVbuh"
+                target="_blank">
+                İdman
+            </a>
+  </li>
+   <li>
+    <a href="https://jhiwr-my.sharepoint.com/:u:/g/personal/hr40_365mspro_site/EdWpUcD9mQpEv6-3jc4N_jAB8SRtW_3j0HhuDwc-5qjPhA?e=KK9AQg"
+                target="_blank">
+                Win 10 1903
+            </a>
+  </li>
+  <li>
+    <a href="https://jhiwr-my.sharepoint.com/:u:/g/personal/hr40_365mspro_site/EWATKz2JFrJEnOw9Fpj7Oj4BemR-xf60PJ44yf2-dseN2Q?e=esCak6"
+                target="_blank">
+                Recovery My Files
+            </a>
+  </li>
   </ul>
 </body>
 </html>
